banner full complete

--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
     </div>
     <!-- navbar end -->
 
-    <!-- Carosel start -->
+    <!-- Carosel or banner start -->
     <section class="">
       <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
+          <!-- Carousel item 1  start-->
           <div class="carousel-item active">
             <div class="banner-image-1 d-flex justify-content-center align-items-center text-center">
               <div>
@@ -72,17 +73,38 @@
               </div>
             </div>
           </div>
+          <!-- Carousel item 1 end -->
+          
+          <!-- Carousel item 2  start -->
           <div class="carousel-item">
-            <div class="banner-image-2">
-
+            <div class="banner-image-2 d-flex justify-content-center align-items-center text-center">
+              <div>
+                <h1 class="text-primary display-3 fw-bold">Making <span class="text-secondary"><u>your
+                      Ideas</u></span><br>happen!</h1>
+                <p class="text-secondary fs-5">The most informative block-chain news source.Publishing multiple article
+                  and vedios daily</p>
+                <button type="button" class="btn btn-secondary btn-lg">Get started</button>
+                <button type="button" class="btn btn-primary btn-lg">Our Project</button>
+              </div>
             </div>
           </div>
-          <div class="carousel-item">
-            <div class="banner-image-3">
+          <!-- Carousel item 2  end -->
 
-            </div>
+          <!-- Carousel item 3  start -->
+          <div class="carousel-item">
+            <div class="banner-image-3 d-flex justify-content-center align-items-center text-center">
+              <div>
+                <h1 class="text-primary display-3 fw-bold">Making <span class="text-secondary"><u>your
+                      Ideas</u></span><br>happen!</h1>
+                <p class="text-secondary fs-5">The most informative block-chain news source.Publishing multiple article
+                  and vedios daily</p>
+                <button type="button" class="btn btn-secondary btn-lg">Get started</button>
+                <button type="button" class="btn btn-primary btn-lg">Our Project</button>
+              </div>
           </div>
         </div>
+        <!-- Carousel item 3 end -->
+
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
           data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -95,6 +117,7 @@
         </button>
       </div>
     </section>
+    <!-- Carousel or banner end -->
   </header>
 
   <script src="JS/bootstrap.js"></script>
