--- a/index.html
+++ b/index.html
@@ -119,7 +119,30 @@
     </section>
     <!-- Carousel or banner end -->
   </header>
+  <!-- header end -->
 
+  <!-- main start -->
+  <main>
+    <section class="container my-5 py-5">
+      <div class="row">
+        <div class="col-md-6">
+          <img class="w-100" src="Images/about-img.jpg" alt="" srcset="">
+        </div>
+
+        <div class="col-md-6 d-flex justify-content-center align-items-center">
+          <div class="ms-3">
+            <h1 class="text-secondary fw-bolder">Who we are</h1>
+          <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <ul>
+            <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+            <li>Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+            <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+          </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
   <script src="JS/bootstrap.js"></script>
 </body>
 
