Services almost complete

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="styles/bootstrap.css">
   <link rel="stylesheet" href="styles/style.css">
+  <script src="https://kit.fontawesome.com/46eda60ee5.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -74,7 +75,7 @@
             </div>
           </div>
           <!-- Carousel item 1 end -->
-          
+
           <!-- Carousel item 2  start -->
           <div class="carousel-item">
             <div class="banner-image-2 d-flex justify-content-center align-items-center text-center">
@@ -101,21 +102,21 @@
                 <button type="button" class="btn btn-secondary btn-lg">Get started</button>
                 <button type="button" class="btn btn-primary btn-lg">Our Project</button>
               </div>
+            </div>
           </div>
-        </div>
-        <!-- Carousel item 3 end -->
+          <!-- Carousel item 3 end -->
 
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-          data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-          data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
-      </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
     </section>
     <!-- Carousel or banner end -->
   </header>
@@ -123,25 +124,79 @@
 
   <!-- main start -->
   <main>
+    <!-- About section -->
     <section class="container my-5 py-5">
       <div class="row">
         <div class="col-md-6">
-          <img class="w-100" src="Images/about-img.jpg" alt="" srcset="">
+          <img class="w-100 img-fluid" src="Images/about-img.jpg" alt="" srcset="">
         </div>
 
         <div class="col-md-6 d-flex justify-content-center align-items-center">
           <div class="ms-3">
             <h1 class="text-secondary fw-bolder">Who we are</h1>
-          <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <ul>
-            <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-            <li>Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-            <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-          </ul>
+            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+              laborum.</p>
+            <ul>
+              <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+              <li>Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+              <li>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+            </ul>
           </div>
         </div>
       </div>
     </section>
+    <!-- about section end -->
+
+    <!-- Services section start -->
+    <section class="container ">
+      <h1 class="text-secondary fw-bold display-5">Services</h1>
+      <p class="mt-2">Retaining customer base is important for any enterprise, it takes great effort to make good
+        customer relationship and minute error can ruin it. Owing to our outstanding customer service we have maintained
+        the 85 % customer retention rate. We, the best IT service provider company in Noida help your business in
+        getting loyalty back by transforming into latest advanced IT technology.</p>
+
+      <div class="row">
+        <div class="col-md-6 d-flex shadow p-3 my-4">
+          <div class="d-flex justify-content-center align-items-center">
+            <i class="fa-solid fa-brain fa-4x text-primary d-flex justify-content-center align-items-center"></i>
+          </div>
+          <div class="ms-3">
+            <h3 class="text-primary">Digital Transforming</h3>
+            <p>Transforming business models of the organization is an important aspect of digital transformation, it
+              comprises transforming the business functions, activities, processes, models, assets, and activities</p>
+          </div>
+        </div>
+        <div class="col-md-6 d-flex shadow p-3 my-4">
+          <div class="d-flex justify-content-center align-items-center">
+            <i class="fa-solid fa-brain fa-4x text-primary"></i>
+          </div>
+          <div class="ms-3">
+            <h3 class="text-primary"> UI/UX Design</h3>
+            <p>Transforming business models of the organization is an important aspect of digital transformation, it comprises transforming the business functions, activities, processes, models, assets, and activities.</p>
+          </div>
+        </div>
+        <div class="col-md-6 d-flex shadow p-3 my-4">
+          <div class="d-flex justify-content-center align-items-center">
+            <i class="fa-solid fa-brain fa-4x text-primary"></i>
+          </div>
+          <div class="ms-3">
+            <h3 class="text-primary">IT Infrastructure</h3>
+            <p>Transforming business models of the organization is an important aspect of digital transformation, it comprises transforming the business functions, activities, processes, models, assets, and activities.</p>
+          </div>
+        </div>
+
+        <div class="col-md-6 d-flex shadow p-3 my-4">
+          <div class="d-flex justify-content-center align-items-center">
+            <i class="fa-solid fa-brain fa-4x text-primary"></i>
+          </div>
+          <div class="ms-3">
+            <h3 class="text-primary">Business Analysis</h3>
+            <p>Transforming business models of the organization is an important aspect of digital transformation, it comprises transforming the business functions, activities, processes, models, assets, and activities.</p>
+          </div>
+        </div>
+    </section>
+    <!-- Services section end  -->
   </main>
   <script src="JS/bootstrap.js"></script>
 </body>
