--- a/index.html
+++ b/index.html
@@ -156,8 +156,9 @@
         the 85 % customer retention rate. We, the best IT service provider company in Noida help your business in
         getting loyalty back by transforming into latest advanced IT technology.</p>
 
-      <div class="row">
-        <div class="col-md-6 d-flex shadow p-3 my-4">
+      <div class="">
+        <div class="row">
+        <div class="col-md-6 d-flex shadow p-3 my-4 ">
           <div class="d-flex justify-content-center align-items-center">
             <i class="fa-solid fa-brain fa-4x text-primary d-flex justify-content-center align-items-center"></i>
           </div>
@@ -169,7 +170,7 @@
         </div>
         <div class="col-md-6 d-flex shadow p-3 my-4">
           <div class="d-flex justify-content-center align-items-center">
-            <i class="fa-solid fa-brain fa-4x text-primary"></i>
+            <i class="fa-solid fa-swatchbook fa-4x text-primary"></i>
           </div>
           <div class="ms-3">
             <h3 class="text-primary"> UI/UX Design</h3>
@@ -178,7 +179,7 @@
         </div>
         <div class="col-md-6 d-flex shadow p-3 my-4">
           <div class="d-flex justify-content-center align-items-center">
-            <i class="fa-solid fa-brain fa-4x text-primary"></i>
+            <i class="fa-solid fa-microchip fa-4x text-primary"></i>
           </div>
           <div class="ms-3">
             <h3 class="text-primary">IT Infrastructure</h3>
@@ -188,15 +189,42 @@
 
         <div class="col-md-6 d-flex shadow p-3 my-4">
           <div class="d-flex justify-content-center align-items-center">
-            <i class="fa-solid fa-brain fa-4x text-primary"></i>
+            <i class="fa-solid fa-magnifying-glass-chart fa-4x text-primary"></i>
           </div>
           <div class="ms-3">
             <h3 class="text-primary">Business Analysis</h3>
             <p>Transforming business models of the organization is an important aspect of digital transformation, it comprises transforming the business functions, activities, processes, models, assets, and activities.</p>
           </div>
         </div>
+      </div>
     </section>
     <!-- Services section end  -->
+
+    <!-- client section start-->
+    <section class="container  my-5 py-5">
+      <h1 class="text-secondary fw-bold">Client</h1>
+      <p>Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse amet veniam enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
+
+      <div class="d-flex justify-content-between flex-wrap">
+        <img class="client-image" src="Images/clients/client-1.png" alt="" srcset="">
+        <img class="client-image" src="Images/clients/client-2.png" alt="" srcset="">
+        <img class="client-image" src="Images/clients/client-3.png" alt="" srcset="">
+        <img class="client-image" src="Images/clients/client-4.png" alt="" srcset="">
+        <img class="client-image" src="Images/clients/client-5.png" alt="" srcset="">
+        <img class="client-image" src="Images/clients/client-6.png" alt="" srcset=""">
+      </div>
+    </section>
+    <!-- client section end  -->
+
+    <!-- Report box -->
+    <section class="bg-primary mb-5 p-5">
+      <div class="container">
+        <h1 class="text-white fw-bold">Call to Action</h1>
+      <p class="text-white">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <button class="btn btn-lg btn-success">Call to Action</button>
+      </div>
+    </section>
+
   </main>
   <script src="JS/bootstrap.js"></script>
 </body>
