Almost done team section

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     </section>
     <!-- client section end  -->
 
-    <!-- Report box -->
+    <!-- Report box start-->
     <section class="bg-primary mb-5 p-5">
       <div class="container">
         <h1 class="text-white fw-bold">Call to Action</h1>
@@ -224,8 +224,67 @@
       <button class="btn btn-lg btn-success">Call to Action</button>
       </div>
     </section>
+    <!-- report box end  -->
+
+    <!-- Team section start -->
+    <section class="container py-5">
+      <h1 class="fw-bold text-secondary">Our Team</h1>
+      <p>Sit sint consectetur velit quos quisquam cupiditate nemo qui</p>
+
+      <div class="d-flex justify-content-between flex-wrap my-5">
+        <!-- image-1 -->
+        <div class="card" style="width: 18rem;">
+          <div class="text-center pt-4">
+            <img class="w-50  align-items-center border rounded-circle border-primary" src="Images/avinandanroyshanto.jpg" class="card-img-top" alt="...">
+          </div>
+          <div class="card-body">
+            <h5 class="text-primary text-center">Avinandan Roy</h5>
+            <p class="text-center"><i>Chief Executive Officer</i></p>
+            <p class="text-center">qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut</p>
+          </div>
+        </div>
+        <!-- image2 -->
+        <div class="card" style="width: 18rem;">
+          <div class="text-center pt-4">
+            <img class="w-50  align-items-center border rounded-circle border-primary" src="Images/team-2.jpg" class="card-img-top" alt="...">
+          </div>
+          <div class="card-body">
+            <h5 class="text-primary text-center">Sarah Jhinson</h5>
+            <p class="text-center"><i>Product Manager</i></p>
+            <p class="text-center">qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut</p>
+          </div>          
+        </div>
+        
+        <!-- image3  -->
+        <div class="card" style="width: 18rem;">
+          <div class="text-center pt-4">
+            <img class="w-50  align-items-center border rounded-circle border-primary" src="Images/team-3.jpg" class="card-img-top" alt="...">
+          </div>
+          <div class="card-body">
+            <h5 class="text-primary text-center">William Anderson</h5>
+            <p class="text-center"><i>CTO</i></p>
+            <p class="text-center">qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut</p>
+          </div>
+        </div>
+        <!-- image4 -->
+        <div class="card" style="width: 18rem;">
+          <div class="text-center pt-4">
+            <img class="w-50  align-items-center border rounded-circle border-primary" src="Images/team-4.jpg" class="card-img-top" alt="...">
+          </div>
+          <div class="card-body">
+            <h5 class="text-primary text-center">Amanda Jepson</h5>
+            <p class="text-center"><i>Accountant</i></p>
+            <p class="text-center">qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut</p>
+          </div>
+        </div>
+    </section>
+    <!-- Tean secrion end  -->
 
   </main>
+  <!-- Main end -->
+
+
+  <!-- Bootsstrap JS file  -->
   <script src="JS/bootstrap.js"></script>
 </body>
 
